@@ -4,7 +4,7 @@
   <attribute name="title" type="string" value="Example Data"/>
 
   <aggregation type="union">
-    <netcdf location="file:src/test/data/ncml/nc/example2.nc">
+    <netcdf location="nc/example2.nc">
       <explicit/>
 
       <dimension name="time" length="2" isUnlimited="true"/>
@@ -28,7 +28,7 @@
 
     </netcdf>
 
-    <netcdf location="file:src/test/data/ncml/nc/example1.nc">
+    <netcdf location="nc/example1.nc">
       <explicit/>
 
       <dimension name="time" length="2" isUnlimited="true"/>
