@@ -11,7 +11,7 @@
   <parent>
     <groupId>edu.ucar</groupId>
     <artifactId>netcdf-parent</artifactId>
-    <version>4.2.19</version>
+    <version>4.2.20</version>
   </parent>
 
 
