@@ -1,7 +1,7 @@
 # DO NOT EDIT THIS FILE: It is automatically generated from C:\dev\tds4.2\thredds\tds\src\main\template\thredds\server\tds.properties.TEMPLATE
-tds.version=4.2.20110208.0048
+tds.version=4.2.20110214.2343
 tds.version.brief=4.2
-tds.version.builddate=20110208.0048
+tds.version.builddate=20110214.2343
 
 tds.url=http://www.unidata.ucar.edu/projects/THREDDS/tech/TDS.html
 tds.documentation.url=http://www.unidata.ucar.edu/projects/THREDDS/tech/TDS.html
